--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "For my Fial Project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon index",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
